@@ -48,6 +48,6 @@ public class VariableDeclaration extends Declaration {
 
     @Override
     public String toString() {
-        return String.format("%s -> %s ", this.name, this.type);
+        return "%s -> %s ".formatted(this.name, this.type);
     }
 }
