@@ -51,7 +51,7 @@ public abstract class AbstractStandardDMNDialectDefinition<NUMBER, DATE, TIME, D
         } else if (format == JSON) {
             return new JsonDMNSerializer(logger, inputParameters.isXsdValidation());
         } else {
-            throw new IllegalArgumentException(String.format("Format '%s' is not supported yet", format));
+            throw new IllegalArgumentException("Format '%s' is not supported yet".formatted(format));
         }
     }
 
