@@ -15,6 +15,6 @@ package com.gs.dmn.serialization;
 public class DefaultTypeDeserializationConfigurer implements TypeDeserializationConfigurer {
     @Override
     public String deserializeTypeAs(String qualifiedInterfaceName) {
-        return String.format("%sImpl", qualifiedInterfaceName);
+        return "%sImpl".formatted(qualifiedInterfaceName);
     }
 }
