@@ -105,7 +105,7 @@ public class XStreamMarshaller implements SimpleDMNMarshaller {
             XStream xStream = newXStream();
             return xStream.fromXML(input);
         } catch (Exception e) {
-            LOGGER.error(String.format("Error unmarshalling DMN model from file '%s'.", input.getAbsolutePath()), e);
+            LOGGER.error("Error unmarshalling DMN model from file '%s'.".formatted(input.getAbsolutePath()), e);
         }
         return null;
     }
@@ -116,7 +116,7 @@ public class XStreamMarshaller implements SimpleDMNMarshaller {
             XStream xStream = newXStream();
             return xStream.fromXML(input);
         } catch (Exception e) {
-            LOGGER.error(String.format("Error unmarshalling DMN model from file '%s'.", input), e);
+            LOGGER.error("Error unmarshalling DMN model from file '%s'.".formatted(input), e);
         }
         return null;
     }
@@ -150,8 +150,7 @@ public class XStreamMarshaller implements SimpleDMNMarshaller {
                 CustomStaxWriter hsWriter = (CustomStaxWriter) STAX_DRIVER.createWriter(writer)) {
 
             XStream xStream = newXStream();
-            if (o instanceof DMNBaseElement) {
-                DMNBaseElement base = (DMNBaseElement) o;
+            if (o instanceof DMNBaseElement base) {
                 String dmnPrefix = base.getElementInfo().getNsContext().entrySet().stream().filter(kv -> DMNVersion.DMN_14.getNamespace().equals(kv.getValue())).findFirst().map(Map.Entry::getKey).orElse("");
                 hsWriter.getQNameMap().setDefaultPrefix(dmnPrefix);
             }
