@@ -59,7 +59,7 @@ public class BasicDMNToKotlinTransformer extends BasicDMNToJavaTransformer {
 
     @Override
     public String makeListType(String listType, String elementType) {
-        return this.nativeTypeFactory.nullableType(String.format("%s<%s>", listType, this.nativeTypeFactory.nullableType(elementType)));
+        return this.nativeTypeFactory.nullableType("%s<%s>".formatted(listType, this.nativeTypeFactory.nullableType(elementType)));
     }
 
     @Override
@@ -69,7 +69,7 @@ public class BasicDMNToKotlinTransformer extends BasicDMNToJavaTransformer {
 
     @Override
     protected String makeFunctionType(String name, String returnType) {
-        return this.nativeTypeFactory.nullableType(String.format("%s<%s>", name, this.nativeTypeFactory.nullableType(returnType)));
+        return this.nativeTypeFactory.nullableType("%s<%s>".formatted(name, this.nativeTypeFactory.nullableType(returnType)));
     }
 
     @Override
@@ -84,7 +84,7 @@ public class BasicDMNToKotlinTransformer extends BasicDMNToJavaTransformer {
 
     @Override
     public String drgElementSignatureWithMap(TDRGElement element) {
-        return String.format("%s: %s, %s: %s", inputVariableName(), inputClassName(), executionContextVariableName(), executionContextClassName());
+        return "%s: %s, %s: %s".formatted(inputVariableName(), inputClassName(), executionContextVariableName(), executionContextClassName());
     }
 
     @Override
@@ -92,13 +92,13 @@ public class BasicDMNToKotlinTransformer extends BasicDMNToJavaTransformer {
         String type = param.getLeft().getLeft();
         String varName = param.getLeft().getRight();
         String propertyName = param.getRight();
-        return String.format("var %s: %s = %s.%s",
-                varName, type, executionContextVariableName(), getter(propertyName));
+        return "var %s: %s = %s.%s".formatted(
+            varName, type, executionContextVariableName(), getter(propertyName));
     }
 
     @Override
     public String lazyEvaluation(String elementName, String nativeName) {
-        return isLazyEvaluated(elementName) ? String.format("%s?.getOrCompute()", nativeName) : nativeName;
+        return isLazyEvaluated(elementName) ? "%s?.getOrCompute()".formatted(nativeName) : nativeName;
     }
 
     @Override
