@@ -37,7 +37,7 @@ public class DoubleMixedJavaTimeDMNBaseDecision extends DoubleMixedJavaTimeFEELL
 
     @Override
     public Rule getRuleAnnotation(int ruleIndex) {
-        String methodName = String.format("rule%d", ruleIndex);
+        String methodName = "rule%d".formatted(ruleIndex);
         Class<? extends DoubleMixedJavaTimeDMNBaseDecision> cls = this.getClass();
         Method[] declaredMethods = cls.getDeclaredMethods();
         for (Method method : declaredMethods) {
