@@ -34,6 +34,6 @@ public class Disjunction extends UnaryTest {
     @Override
     public String toString() {
         String list = value.stream().map(Object::toString).collect(Collectors.joining(", "));
-        return String.format("%s(%s)", this.getClass().getSimpleName(), list);
+        return "%s(%s)".formatted(this.getClass().getSimpleName(), list);
     }
 }
